Compile with PhysX 3.4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 PROJECT(osgPhysX)
-CMAKE_MINIMUM_REQUIRED(VERSION 2.4.7)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.6.0)
 
 IF(COMMAND cmake_policy)
     CMAKE_POLICY(SET CMP0003 NEW)
@@ -79,8 +79,8 @@ LINK_DIRECTORIES(
     ${OSG_LIB_DIR}
 )
 
-SET(THIRD_PARTY_INCLUDES ${SPEEDTREE_THIRD_PARTY_INCLUDES} ${PHYSX_INCLUDE_DIR})
-SET(THIRD_PARTY_LIBRARIES ${SPEEDTREE_THIRD_PARTY_LIBRARIES} ${PHYSX_LIBRARIES})
+SET(THIRD_PARTY_INCLUDES ${PHYSX_SHARED_INCLUDE_DIR} ${PHYSX_INCLUDE_DIR})
+SET(THIRD_PARTY_LIBRARIES ${PHYSX_LIBRARIES})
 
 MACRO(START_EXECUTABLE)
 
