--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,11 @@
 LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 IF(WIN32)
-    SET(THIRD_PARTY_LIBRARIES ws2_32 dinput8 dxguid)
+    IF(CMAKE_CL_64)
+        LINK_DIRECTORIES(x64)
+    ELSE(CMAKE_CL_64)
+        LINK_DIRECTORIES(x86)
+    ENDIF(CMAKE_CL_64)
+    SET(THIRD_PARTY_LIBRARIES ${THIRD_PARTY_LIBRARIES} ws2_32 dinput8 dxguid)
 ENDIF(WIN32)
 
 # Character control
